--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title></title>
   </head>
   <body>
+    <div class="grid">
+      <div id="navigation">
+        <div class="navwrap">
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#about">Work</a></li>
+            <li><a href="#about">Contact</a></li>
+          </ul>
+        </div>
+      </div>
 
+
+
+
+
+
+
+
+
+
+
+      <div id="header">
+        header
+      </div>
+      <div id="work">
+        work
+      </div>
+      <div id="contact">
+        contact
+      </div>
+      <div id="footer">
+        footer
+      </div>
+
+    </div>
   </body>
 </html>
