going to switch to a bootstrap heavy layout. this is the CSS grid/flexbox version

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title></title>
   </head>
   <body>
-    <div class="grid">
-      <div id="navigation">
-        <div class="navwrap">
-          <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#about">Work</a></li>
-            <li><a href="#about">Contact</a></li>
-          </ul>
-        </div>
-      </div>
+
+      <div class="grid">
+        <nav id="navigation">
+          <div class="navwrap">
+            <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#about">Work</a></li>
+              <li><a href="#about">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
 
 
 
@@ -29,8 +30,21 @@
 
 
       <div id="header">
-        header
+        <div class="profileContainer">
+          <div class="left-half">
+            <p>
+              Hi, my name is Cody.  I have a passion for creating
+              beautiful and functional websites.
+            </p>
+          </div>
+          <div class="right-half">
+            <img class="clearfix profilepic" src="ProfilePic.jpg" alt="Headshot of Cody" />
+          </div>
+        </div>
       </div>
+
+
+
       <div id="work">
         work
       </div>
