--- a/index.html
+++ b/index.html
@@ -1,60 +1,107 @@
 <!DOCTYPE html>
 <!-- This is a professional portfolio page for Cody Tisheuar -->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title></title>
-  </head>
-  <body>
 
-      <div class="grid">
-        <nav id="navigation">
-          <div class="navwrap">
-            <ul>
-              <li><a href="#about">About</a></li>
-              <li><a href="#about">Work</a></li>
-              <li><a href="#about">Contact</a></li>
-            </ul>
-          </div>
-        </nav>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-itWEYdFWzZPBG78bJOOiQIn06QCgN/F0wMDcC4nOhxY=" crossorigin="anonymous" />
+  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <title>Cody Tisheuar's Portfolio Page</title>
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-sm navbar-light fixed-top" id="navbar">
+    <a class="navbar-brand" href="#">Cody Tisheuar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link " href="#">About Me<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
-
-
-
-
-
-
-
-
-
-      <div id="header">
-        <div class="profileContainer">
-          <div class="left-half">
-            <p>
-              Hi, my name is Cody.  I have a passion for creating
-              beautiful and functional websites.
-            </p>
-          </div>
-          <div class="right-half">
-            <img class="clearfix profilepic" src="ProfilePic.jpg" alt="Headshot of Cody" />
-          </div>
+  <!-- Jumbotron -->
+      <div class="jumbotron img-fluid text-center">
+        <div class="container">
+          <h1 class="display-4">Cody Tisheuar</h1>
+          <p class="lead">Front-End Web Developer</p>
+          <button type="button" class="btn btn-outline-secondary"><a href="#github"><i class="fab fa-github"></i> GitHub</a></button>
+          <button type="button" class="btn btn-outline-secondary"><a href="#linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a></button>
+          <button type="button" class="btn btn-outline-secondary"><a href="#codepen"><i class="fab fa-codepen"></i> CodePen</a></button>
         </div>
       </div>
 
-
-
-      <div id="work">
-        work
+  <!-- About Me -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md order-md-2 about-image">
+        <img class="profile-image img-fluid" src="profileimage.jpg" alt="Profile Image of Cody Tisheuar" />
       </div>
-      <div id="contact">
-        contact
+      <div class="col-md order-md-1 about">
+        <h1>About Me</h1>
+        <p>I am a self taught web developer with a focus on front-end development.</p>
+        <p>My passions include developing websites, algorithms, music, interdimensional travel and communicating with extraterrestrial beings.</p>
+        <p>My realm of expertise includes, but is not limited to:</p>
+        <ul class="skills list-group list-group-flush">
+          <li class="list-group-item">HTML/CSS</li>
+          <li class="list-group-item">Javascript/jQuery</li>
+          <li class="list-group-item">Bootstrap/Foundation/Other Frameworks</li>
+          <li class="list-group-item">Responsive Web Design/Interactive Websites</li>
+          <li class="list-group-item">Java</li>
+        </ul>
       </div>
-      <div id="footer">
-        footer
-      </div>
-
     </div>
-  </body>
+
+<!-- Work -->
+
+
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+  <!--
+  <div id="header">
+    <div class="profileContainer">
+      <div class="left-half">
+        <p>
+          Hi, my name is Cody. I have a passion for creating beautiful and functional websites.
+        </p>
+      </div>
+      <div class="right-half">
+        <img class="clearfix profilepic" src="ProfilePic.jpg" alt="Headshot of Cody" />
+      </div>
+    </div>
+  </div> -->
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js" integrity="sha256-Nd2xznOkrE9HkrAMi4xWy/hXkQraXioBg9iYsBrcFrs=" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
