Added Work section and got the Contact section's background image in place

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 
 
   <!-- Jumbotron -->
-      <div class="jumbotron img-fluid text-center">
-        <div class="container">
-          <h1 class="display-4">Cody Tisheuar</h1>
-          <p class="lead">Front-End Web Developer</p>
-          <button type="button" class="btn btn-outline-secondary"><a href="#github"><i class="fab fa-github"></i> GitHub</a></button>
-          <button type="button" class="btn btn-outline-secondary"><a href="#linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a></button>
-          <button type="button" class="btn btn-outline-secondary"><a href="#codepen"><i class="fab fa-codepen"></i> CodePen</a></button>
-        </div>
-      </div>
+  <div class="jumbotron img-fluid text-center">
+    <div class="container">
+      <h1 class="display-4">Cody Tisheuar</h1>
+      <p class="lead">Front-End Web Developer</p>
+      <button type="button" class="btn btn-outline-secondary"><a href="#github"><i class="fab fa-github"></i> GitHub</a></button>
+      <button type="button" class="btn btn-outline-secondary"><a href="#linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a></button>
+      <button type="button" class="btn btn-outline-secondary"><a href="#codepen"><i class="fab fa-codepen"></i> CodePen</a></button>
+    </div>
+  </div>
 
   <!-- About Me -->
   <div class="container-fluid">
@@ -66,35 +66,69 @@
       </div>
     </div>
 
-<!-- Work -->
-
-
-
-
+    <!-- Work -->
+    <div class="row">
+      <div class="col-md text-center work">
+        <h1>Work</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card card-work">
+          <div class="card-body">
+            <a href="#"><img class="card-img-top" src="..." alt="Photo of work"></a>
+            <h5 class="card-title">Coming soon!</h5>
+            <p class="card-text">Lorem ipsum</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card card-work">
+          <div class="card-body">
+            <a href="#"><img class="card-img-top" src="..." alt="Photo of work"></a>
+            <h5 class="card-title">Coming soon!</h5>
+            <p class="card-text">Lorem ipsum</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row work">
+      <div class="col-sm-6">
+        <div class="card card-work">
+          <div class="card-body">
+            <a href="#"><img class="card-img-top" src="..." alt="Photo of work"></a>
+            <h5 class="card-title">Coming soon!</h5>
+            <p class="card-text">Lorem ipsum</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card card-work">
+          <div class="card-body">
+            <a href="#"><img class="card-img-top" src="..." alt="Photo of work"></a>
+            <h5 class="card-title">Coming soon!</h5>
+            <p class="card-text">Lorem ipsum</p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>  <!-- /container -->
+<!-- Contact Section -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md contact">
+      <div class="card">
+        <div class="card-body">
+          This is some text within a card body.
+        </div>
+      </div>
+    </div>
   </div>
 
 
+</div>
 
 
-
-
-
-
-
-
-  <!--
-  <div id="header">
-    <div class="profileContainer">
-      <div class="left-half">
-        <p>
-          Hi, my name is Cody. I have a passion for creating beautiful and functional websites.
-        </p>
-      </div>
-      <div class="right-half">
-        <img class="clearfix profilepic" src="ProfilePic.jpg" alt="Headshot of Cody" />
-      </div>
-    </div>
-  </div> -->
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
