layout and all elements are complete.  need to fix some scalability issues and add some javascript later

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <!-- This is a professional portfolio page for Cody Tisheuar -->
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-itWEYdFWzZPBG78bJOOiQIn06QCgN/F0wMDcC4nOhxY=" crossorigin="anonymous" />
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
@@ -35,7 +36,7 @@
 
 
   <!-- Jumbotron -->
-  <div class="jumbotron img-fluid text-center">
+  <div class="jumbotron text-center">
     <div class="container">
       <h1 class="display-4">Cody Tisheuar</h1>
       <p class="lead">Front-End Web Developer</p>
@@ -112,25 +113,36 @@
         </div>
       </div>
     </div>
-</div>  <!-- /container -->
-<!-- Contact Section -->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md contact">
-      <div class="card">
-        <div class="card-body">
-          This is some text within a card body.
+  </div>
+  <!-- /container -->
+  <!-- Contact Section -->
+  <div class="contact-background">
+    <div class="container-fluid contact-font">
+      <h1 class="contact-spacing">Contact</h1>
+      <br>
+
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <p>I'm available for work! Please send me a message and I will respond ASAP.</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <form>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="E-mail address">
+            </div>
+            <div class="form-group">
+              <textarea class="form-control profile-comment" placeholder="Comment"></textarea>
+            </div>
+            <button type="submit" class="btn btn-secondary">Submit</button>
+          </form>
         </div>
       </div>
     </div>
   </div>
-
-
-</div>
-
-
-
-
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
