--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link " href="#">About Me<span class="sr-only">(current)</span></a>
+          <a class="nav-link " href="#about">About Me<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Work</a>
+          <a class="nav-link" href="#work">Work</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -50,7 +50,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md order-md-2 about-image">
-        <img class="profile-image img-fluid" src="profileimage.jpg" alt="Profile Image of Cody Tisheuar" />
+        <img id="about" class="profile-image img-fluid" src="profileimage.jpg" alt="Profile Image of Cody Tisheuar" />
       </div>
       <div class="col-md order-md-1 about">
         <h1>About Me</h1>
@@ -69,13 +69,13 @@
 
     <!-- Work -->
     <div class="row">
-      <div class="col-md text-center work">
+      <div id="work" class="col-md text-center work">
         <h1>Work</h1>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="card card-work">
+    <div class="row text-center">
+      <div class="col-md-6 work">
+        <div class="card border-dark card-work mx-auto">
           <div class="card-body">
             <a href="#"><img class="card-img-top" src="..." alt="Photo of work"></a>
             <h5 class="card-title">Coming soon!</h5>
@@ -83,8 +83,8 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6">
-        <div class="card card-work">
+      <div class="col-md-6 work">
+        <div class="card border-dark card-work mx-auto">
           <div class="card-body">
             <a href="#"><img class="card-img-top" src="..." alt="Photo of work"></a>
             <h5 class="card-title">Coming soon!</h5>
@@ -93,9 +93,9 @@
         </div>
       </div>
     </div>
-    <div class="row work">
-      <div class="col-sm-6">
-        <div class="card card-work">
+    <div class="row text-center">
+      <div class="col-md-6 work">
+        <div class="card border-dark card-work mx-auto">
           <div class="card-body">
             <a href="#"><img class="card-img-top" src="..." alt="Photo of work"></a>
             <h5 class="card-title">Coming soon!</h5>
@@ -103,8 +103,8 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6">
-        <div class="card card-work">
+      <div class="col-md-6 work">
+        <div class="card border-dark card-work mx-auto">
           <div class="card-body">
             <a href="#"><img class="card-img-top" src="..." alt="Photo of work"></a>
             <h5 class="card-title">Coming soon!</h5>
@@ -114,16 +114,15 @@
       </div>
     </div>
   </div>
-  <!-- /container -->
   <!-- Contact Section -->
   <div class="contact-background">
-    <div class="container-fluid contact-font">
+    <div id="contact" class="container-fluid contact-font">
       <h1 class="contact-spacing">Contact</h1>
       <br>
 
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6">
-          <p>I'm available for work! Please send me a message and I will respond ASAP.</p>
+          <p>I'm currently available for work. Please send me a message and I will respond ASAP.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6">
           <form>
