--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-itWEYdFWzZPBG78bJOOiQIn06QCgN/F0wMDcC4nOhxY=" crossorigin="anonymous" />
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <title>Cody Tisheuar's Portfolio Page</title>
@@ -50,7 +49,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md order-md-2 about-image">
-        <img id="about" class="profile-image img-fluid" src="profileimage.jpg" alt="Profile Image of Cody Tisheuar" />
+        <img id="about" class="profile-image img-fluid" src="profileimage2.jpg" alt="Profile Image of Cody Tisheuar" />
       </div>
       <div class="col-md order-md-1 about">
         <h1>About Me</h1>
